# Agent-Safety-Paper

./: README.md
AgentSec-Guardrails/: .env.example  .gitignore  README.md  pyproject.toml
AgentSec-Guardrails/apps/: __init__.py
AgentSec-Guardrails/apps/api/: serializers.py
AgentSec-Guardrails/apps/web/public/: index.html
AgentSec-Guardrails/apps/web/public/assets/: app.js  styles.css
AgentSec-Guardrails/config/: default_policy.yaml
AgentSec-Guardrails/docs/: agentsec_guardrails_design.md  architecture.md
AgentSec-Guardrails/examples/: agentdojo_guardrail_eval.py  framework_adapter_demo.py  langchain_rail_agent_demo.py  rail_agent_demo.py
AgentSec-Guardrails/src/agent_guardrail/: events.py  proxy.py
AgentSec-Guardrails/src/agent_guardrail/adapters/: __init__.py  generic.py
AgentSec-Guardrails/src/agent_guardrail/policies/: __init__.py  input_guard.py  output_audit_guard.py  patterns.py  retrieval_memory_guard.py  tool_execution_guard.py  tools.py
AgentSec-Guardrails/src/agent_guardrail/runtime/: __init__.py  agentdojo_cases.py  llm_clients.py  tool_registry.py
AgentSec-Guardrails/tests/: test_api_demo.py  test_input_guard.py  test_runtime_integration.py  test_tool_execution_guard.py
SDK/: .gitignore  pyproject.toml
SDK/agentsec_sdk/: __init__.py  config.py  errors.py
SDK/agentsec_sdk/_proto/: __init__.py  agentsec_pb2_grpc.py
SDK/agentsec_sdk/adapters/: template.py
SDK/agentsec_sdk/transport/: __init__.py  base.py
SDK/docs/: sdk-adapters.md  sdk-config.md  sdk-overview.md
SDK/examples/: agent_demo.py  quickstart.py
SDK/proto/: agentsec.proto
SDK/tests/: support.py  test_adapters.py  test_grpc_transport.py
agentsec_sdk/: client.py  factory.py  wire.py
docs/: policy_interface.md  sdk-api.md  sdk-design.md
tests/: conftest.py  (+11 more)
(+27 files in other folders)
