[project]
name = "agent-guardrail"
version = "0.1.0"
description = "Framework-neutral guardrail runtime integration for LangChain, OpenClaw, Hermes, MCP agents, and custom agent runtimes."
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
api = ["fastapi>=0.115", "uvicorn[standard]>=0.30", "openai>=1.0"]
langchain = ["langchain>=0.2", "langchain-openai>=0.1.20"]
local-llm = ["accelerate>=0.30", "torch>=2", "transformers>=4.40"]
nemo = ["nemoguardrails>=0.19"]
dev = ["pytest>=8"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["agent_guardrail*", "apps*"]
